Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="img/POWERNE.png.png" type="image/x-ico">
-  
+  <meta name="google-site-verification" content="eKXPlJsowyIIYL566pgIsFYTImuBfDSJ1D7A_9Qnvsc" />
   <title>Quiz POWERNET</title>
 </head>
 <body>
